# Rusty_Arm_Kernel

./: Cargo.toml  README.md  build_and_flash.sh  config.txt  kernel8.img  linker.ld
.cargo/: config.toml
src/: gpio.rs  main.rs  uart.rs
